# sr6_ros2

./: .gitignore  LICENSE  README.md  README.me  README_action.me  README_controller.me  REAME.me  frames_2025-06-25_18.45.31.gv
bringup/config/: gazebo_bridge.yaml
bringup/launch/: sim.launch.py  sim_robot.launch.py
install/: local_setup.sh  setup.sh
install/robotarm_controller/share/robotarm_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  robotarm_interface.xml
install/smallrobot_description/share/smallrobot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/smallrobot_firmware/share/smallrobot_firmware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  (+2 more)
log/: latest_build
my_arm_rl/: setup.cfg
my_arm_rl/my_arm_rl/: cld_robot_arm_env.py  cld_test_rl.py
robotarm_controller/: CMakeLists.txt  README.me  package.xml  robotarm_interface.xml
robotarm_controller/config/: hw_plugin_description.xml  real_controllers.yaml  sim_controllers.yaml
robotarm_controller/include/robotarm_controller/: robotarm_interface.hpp
robotarm_controller/launch/: gz.launch.py
robotarm_controller/src/: robotarm_interface.cpp
ros2_fndm_interface/: package.xml
ros2_fndm_interface/action/: Alexa.action
smallrobot_description/: install_gazebo_default_models.sh  package.xml
smallrobot_description/launch/: gazebo.launch.py
smallrobot_description/rviz/: default.rviz  smallrobot.rviz
smallrobot_description/urdf/: smallrobot.gv  smallrobot.urdf.xacro  smallrobot_gazebo.xacro  smallrobot_macro.xacro  smallrobot_updated.urdf
smallrobot_firmware/firmware/: accelstepper.ino  s1.ino  teensy_example.ino
smallrobot_firmware/firmware/smallrobot_control.ino/: smallrobot_control.ino.ino
smallrobot_firmware/firmware/smallrobot_control_ino/: smallrobot_control_ino.ino
smallrobot_moveit/: .setup_assistant  CMakeLists.txt  README.me  package.xml
smallrobot_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  smallrobot.srdf  smallrobot.urdf.xacro
smallrobot_moveit/include/smallrobot_moveit/: move_program.hpp  test.hpp
smallrobot_moveit/launch/: demo.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
smallrobot_moveit/src/: move_program.cpp
smallrobot_remote/: package.xml
smallrobot_remote/launch/: alexa.launch.py
smallrobot_remote/smallrobot_remote/: alexa_interface.py
src/: README_GIT.me
src/bringup/: CMakeLists.txt  README.me  package.xml
src/bringup/launch/: gazebo.launch.py.bak  real_robot.launch.py  sim_robot.launch.py
src/bringup/scripts/: gz.sh  realbot.sh
src/my_arm_rl/: ds.READ.me  package.xml  setup.py
src/my_arm_rl/my_arm_rl/: cld_train_rl.py
src/py_actions/: package.xml  setup.py
src/py_actions/py_actions/: fibonacci_client.py  fibonacci_server.py
src/robotarm_controller/: CMakeLists.txt  READ.me  README.me  package.xml  robotarm_interface.xml
src/robotarm_controller/config/: real_controllers.yaml  robotarm_controllers (gazebo ok).yaml  robotarm_controllers (real ok).yaml  robotarm_controllers.yaml  robotarm_gripper_controllers.yaml  sample.yaml  sim_controllers.yaml
src/robotarm_controller/include/robotarm_controller/: robotarm_driver.hpp  robotarm_interface.hpp
src/robotarm_controller/launch/: controller.launch.py  mini.launch.py
src/robotarm_controller/src/: robot_arm_hw_interface.cpp  robotarm_driver.cpp  robotarm_interface.cpp
src/ros2_fndm_interface/: CMakeLists.txt  package.xml
src/ros2_fndm_interface/action/: Fibonacci.action
src/ros2_fndm_interface/msg/: Student.msg
src/smallrobot_alex/: CMakeLists.txt  alex_interface.py  package.xml  planner_action_server.py  setup.cfg  setup.py
src/smallrobot_alex/action/: PlanMovement.action
src/smallrobot_alex/launch/: alex.launch.py
src/smallrobot_description/: CMakeLists.txt  README.md  model.config  package.xml
src/smallrobot_description/launch/: display.launch.py  gazebo.launch.py
src/smallrobot_description/rviz/: smallrobot.rviz
src/smallrobot_description/urdf/: generated_robot.urdf  smallrobot.urdf  smallrobot.urdf.xacro  smallrobot_gazebo.xacro  smallrobot_macro.xacro  smallrobot_ros2_control.xacro  smallrobot_updated.urdf
src/smallrobot_description/world/: my_world.world
src/smallrobot_firmware/: CMakeLists.txt  package.xml
src/smallrobot_firmware/firmware/: accelstepper.ino  define.h  s1.ino
src/smallrobot_moveit/: CMakeLists.txt  README.me  moveit.launch (Copy).py  package.xml
src/smallrobot_moveit/config/: .setup_assistant  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  smallrobot.ros2_control.xacro  smallrobot.srdf  smallrobot.urdf.xacro
src/smallrobot_moveit/launch/: move_group.launch.py  moveit.launch.py  spawn_controllers.launch.py
src/smallrobot_moveit/src/: move_program.cpp  move_program.cpp.bak
src/smallrobot_remote/: CMakeLists.txt  alex_interface.py  package.xml
src/smallrobot_remote/launch/: alexa.launch.py
src/smallrobot_remote/smallrobot_remote/: alexa_interface.py
src/smallrobot_remote/src/: task_server.cpp
tensorboard_logs/PPO_1/: events.out.tfevents.1749363888.ros2.13719.0
tensorboard_logs/PPO_2/: events.out.tfevents.1749475274.ros2.64839.0
tensorboard_logs/PPO_3/: events.out.tfevents.1749477374.ros2.66856.0
tensorboard_logs/PPO_4/: events.out.tfevents.1749477901.ros2.67245.0
tensorboard_logs/PPO_5/: events.out.tfevents.1749477928.ros2.67289.0
tensorboard_logs/PPO_6/: events.out.tfevents.1749478290.ros2.67561.0
tensorboard_logs/PPO_7/: events.out.tfevents.1749478559.ros2.67731.0
tensorboard_logs/PPO_8/: events.out.tfevents.1749535696.ros2.25338.0
tensorboard_logs/PPO_9/: events.out.tfevents.1749536461.ros2.26370.0
(+77 files in other folders)
