<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="giraftw2002@gmail.com">roach</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- <depend>ros2launch</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robotarm_controller</exec_depend>
  <exec_depend>smallrobot_moveit</exec_depend>
  <exec_depend>remote_interface</exec_depend>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
