<?xml version="1.0"?>
<package format="3">
  <name>smallrobot_alex</name>
  <version>0.0.0</version>
  <description>ROS 2 package for the small robot Alex with a planning action using MoveIt 2</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_commander</depend>

  <build_depend>rosidl_default_generator</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rosidl_pycommon</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>